--- a/final/conclusion.tex
+++ b/final/conclusion.tex
@@ -1,13 +1,13 @@
 In this paper we proposed a system that is able to autonomously recognize climbing routes.
-We solved the task of detecting grabbed holds by a hybrid approach:
-Muscle tracking allowed us to identify \emph{if} a hold was grabbed, Visual analysis decided \emph{which} hold was grabbed.
-Field studies showed that our system was reliably detecting grabbed hand holds.
+We solved the task of detecting grabbed holds using a hybrid approach:
+Muscle tracking allowed us to identify \emph{if} a hold was grabbed, visual analysis decided \emph{which} hold was grabbed.
+Field studies showed that our system is reliably detecting grabbed hand holds.
 
 For the future, an important step would be to integrate foot hold detection into the system, for example using pressure sensors in the climber's shoes.
 As mentioned before, we already paved the way for this extension.
 
-Another important improvement would be to stabilize the offset calculation that would enable us to get rid of the colored wristbands.
+\todo{Another important improvement would be to stabilize the offset calculation that would enable us to get rid of the colored wristbands.}
 Also, the colors could be replaced, for example by an infrared signal.
-betaCube's kinect camera already provides means to detect such a signal.
+BetaCube's Kinect camera already provides the means to detect such a signal.
 
 Finally, a precise statistical evaluation of the system with different climbers and conditions is still to be done.
