--- a/final/evaluation.tex
+++ b/final/evaluation.tex
@@ -1,13 +1,13 @@
 Field studies showed that our system was able to reliably detect grabbed hand holds.
-We also built the infrastructure to detect foot holds, however the Myo wearable physically does not fit legs.
+We also built the infrastructure to detect foot holds, however, the Myo wearable physically does not fit legs.
 Nevertheless, our system architecture would easily allow to plug in detection of foot holds using pressure sensors in the climber's shoes.
 The betaCube is already equipped to find feet on the wall as well and match them with the closest foot holds.
 
 We believe that the proposed technology could be applied in a bouldering gym with a so-called moon board that allows for free training.
 Climbers could easily define routes for themselves and make them available to others.
-That our technology does not rely on external electronic devices is a bonus here because climbers often use chalk which might keep them from using standard electronic devices like mobile phones.
+Our technology does not rely on external electronic devices which is a bonus here as climbers often use chalk which might keep them from using standard electronic devices like mobile phones.
 
 Compared to our initial proposal we fulfilled all specified must-haves.
 It is worth mentioning that in the proposal we assumed that the betaCube system is already able to provide us with location data of hand and feet.
 As this was not the case, we built this part from scratch.
-Additionally, we extended our approach with a deletion capability of the previously grabbed holds in order to make it useful.
+Additionally, we extended our approach with a deletion capability of the previously grabbed holds in order to make it more useful.
