--- a/final/implementation.tex
+++ b/final/implementation.tex
@@ -55,8 +55,8 @@ The Myo server was extended to additionally calculate the x- and y-offset of the
 We did so by using the rotational data provided by the Myo's integrated IMU and an estimate of the length of the climbers forearm.
 The betaCube would then adjust the found color position of the Myo using those offsets.
 
-However, in many cases we experienced drifts that made the angles only stabilize after about 5 seconds which is infeasible for a real-time system.
-This problem might be solved by estimating the drift speed in advance but we did not have time to try that out.
+\todo{However, in many cases we experienced drifts that made the angles only stabilize after about 5 seconds which is infeasible for a real-time system.
+This problem might be solved by estimating the drift speed in advance but we did not have time to try that out.}
 
 \subsection{Deletion of previously grabbed holds}
 
