--- a/final/conclusion.tex
+++ b/final/conclusion.tex
@@ -6,8 +6,7 @@ Field studies showed that our system is reliably detecting grabbed hand holds.
 For the future, an important step would be to integrate foot hold detection into the system, for example using pressure sensors in the climber's shoes.
 As mentioned before, we already paved the way for this extension.
 
-\todo{Another important improvement would be to stabilize the offset calculation that would enable us to get rid of the colored wristbands.}
-Also, the colors could be replaced, for example by an infrared signal.
+Another important improvement would be to replace the colors for visual detection, for example by an infrared signal.
 BetaCube's Kinect camera already provides the means to detect such a signal.
 
 Finally, a precise statistical evaluation of the system with different climbers and conditions is still to be done.
